change font gravel

--- a/brands_css/gravel_style.css
+++ b/brands_css/gravel_style.css
@@ -1,3 +1,7 @@
+html body{
+    font-family: 'Montserrat', sans-serif;
+    /* background: #fefbf1; */
+}
 img{
     width: auto;
     height: auto;
