--- a/css/responsive_brands.css
+++ b/css/responsive_brands.css
@@ -6,20 +6,18 @@
 }
 
 @media (max-width: 1199px) {
-
-
-    
+  .main{
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin-left: -90px;
+  }
 }
 @media (max-width: 992px){
-    .logo{
-        margin: 0 auto;
-        padding-left: 20px;
+    .main{
+        margin: 0;
+    }}
 
-    }
-    .menu ul.sub_menu li a{
-        padding-right: 220px;
-    }
-}
 @media (max-width: 768px){
 
 }
