--- a/brands_css/shauran.css
+++ b/brands_css/shauran.css
@@ -34,5 +34,5 @@ img{
 
 .picture img{
     border: 2px solid #d78d64;
-    box-shadow: 15px 15px 15px  black;
+    box-shadow: 15px 15px 15px  gray;
 }
