--- a/brands_css/royal_crown_style.css
+++ b/brands_css/royal_crown_style.css
@@ -32,3 +32,6 @@ img{
     border: 2px solid rgb(185, 178, 108);
     box-shadow: 0px 0px 20px  rgb(185, 178, 108);
 }
+.discription{
+    padding-top: 0px;
+}
