--- a/css/responsive_brands.css
+++ b/css/responsive_brands.css
@@ -7,10 +7,7 @@
 
 @media (max-width: 1199px) {
   .main{
-    display: block;
-    justify-content: center;
-    align-items: center;
-    margin-left: -90px;
+    text-align: center;
   }
 }
 @media (max-width: 992px){
