--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,10 @@ img{
 }
 
 
-.header .logo{
+/* .header .logo{
     width: 150px;
     height: 150px;
+    margin: 0 auto;
 }
 
 .menu ul{
@@ -24,7 +25,7 @@ img{
     display: flex;
     justify-content: center;
     padding-top: 60px;
-    margin-right: -200px;
+    text-align: center;
 }
 
 .menu ul.sub_menu li a {
@@ -39,7 +40,7 @@ img{
 
 .menu ul.sub_menu li a:hover{
     color:goldenrod;
-}
+} */
 
 .main .main_text{
     padding-top: 40px;
@@ -53,6 +54,22 @@ img{
     text-align:end ;
 }
 .banner img{
+    padding-top: 20px;
     border-width: 5px; ;
     border-color: gold;
+}
+.button_brands{
+    display: block;
+    margin:  0 auto;
+    font-size: 32px;
+    color: black;
+    background-color: #fefbf1;
+    border: 2px black solid;
+    transition: all 0.6s ease;
+    margin-bottom: 40px;
+}
+
+.button_brands:hover{
+    background-color: black;
+    color: gold;
 }
