--- a/brands_css/robert_piguet.css
+++ b/brands_css/robert_piguet.css
@@ -6,10 +6,12 @@ img{
     width: auto;
     height: auto;
     max-width: 60%;
-    border-radius: 50%;
+
 }
 .for_page{
-    color: rgb(12, 12, 11);
+    /* background-image: url(../img/royal_crown/bg_royal.jpg); */
+    background-size: cover;
+    color: black;
     text-align: center;
 }
 
@@ -19,13 +21,19 @@ img{
     padding-bottom: 40px;
     font-size: 40px;
 }
+
 .block{
     padding-bottom: 40px;
 }
+.block h4{
+    color: #F5B963;
+}
+
 .picture img{
     border: 2px solid black;
-    box-shadow: 0px 0px 20px  black;
+    box-shadow: 15px 15px 15px  black;
 }
+
 .discription{
-    text-align: center;
-    }
+padding-top: 45px;
+}
