--- a/brands_css/royal_crown_style.css
+++ b/brands_css/royal_crown_style.css
@@ -12,7 +12,7 @@ img{
     /* background-image: url(../img/royal_crown/bg_royal.jpg); */
     background-size: cover;
     color: rgb(78, 68, 14);
-
+    text-align: center;
 }
 
 .header h2{
@@ -34,4 +34,5 @@ img{
 }
 .discription{
     padding-top: 0px;
+    text-align: center;
 }
