--- a/brands_css/vertus.css
+++ b/brands_css/vertus.css
@@ -12,6 +12,7 @@ img{
     /* background-image: url(../img/royal_crown/bg_royal.jpg); */
     background-size: cover;
     color: black;
+    text-align: center;
 }
 
 .header h2{
@@ -35,4 +36,5 @@ img{
 
 .discription{
 padding-top: 45px;
+text-align: center;
 }
